--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
     "illuminate/support": "5.*",
     "keen-io/keen-io": "~2.5"
   },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0",
+    "mockery/mockery": "0.9.*"
+  },
   "autoload": {
     "psr-4": {
       "Wensleydale\\KeenLaravel\\": "src/"
