Laravel 5.5 auto discovery

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,15 @@
     "psr-4": {
       "Wensleydale\\KeenLaravel\\": "src/"
     }
-  }
+  },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Wensleydale\\KeenLaravel\\KeenLaravelServiceProvider"
+            ],
+            "aliases": {
+                "Keen": "Wensleydale\\KeenLaravel\\KeenFacade"
+            }
+        }
+    }
 }
