--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "illuminate/support": "5.*",
-    "keen-io/keen-io": "~2.5"
+    "keen-io/keen-io": "2.6.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
